Tiny correction of create page: spacing, tags etc

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -64,7 +64,7 @@ input[type=text] {
   box-shadow: inset 0 0 8px rgba(0, 0, 0, 0.1), 0 0 16px rgba(0, 0, 0, 0.1);
   padding: 15px;
   background: rgba(255, 255, 255, 0.5);
-  margin: 0 0 10px 0;
+  margin: 0;
 }
 
 #option1 {
