--- a/styles/progress.scss
+++ b/styles/progress.scss
@@ -1,3 +1,8 @@
+#results-container {
+  padding-left: 15%;
+  padding-right: 15%;
+}
+
 .progress-outer {
   background: #000;
   border-radius: 50px;
@@ -62,4 +67,3 @@
   100% { background-color: #792;
          color: #eef; }
 }
-
